// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryResult renders list of UK cases 1`] = `
<div
  id="results"
>
  <div
    className="result"
  >
    <div
      className="details"
    >
      <div
        className="left"
      >
        <span
          className="jurisdiction"
          title="United Kingdom"
        >
          🇬🇧
        </span>
        <a
          className="database no-link"
          href="https://bailii.org/"
          rel="noreferrer"
          target="_blank"
        >
          BAILII
        </a>
      </div>
      <div
        className="right"
      />
    </div>
    <a
      className="case-name link"
      rel="noreferrer"
      target="_blank"
    >
      R v Dudley and Stephens
    </a>
    <div
      className="links"
    >
      <span>
        [1884] EWHC 2 (QB)
      </span>
      <div
        className="link judgment"
      >
        <a
          href="http://www.bailii.org/ew/cases/EWHC/QB/1884/2.html"
          rel="noreferrer"
          target="_blank"
        >
          Judgment
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`QueryResult renders loading 1`] = `
<div
  className="animated-loading-container"
>
  <div>
    Loading...
  </div>
  <div
    className="animated-loading"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`QueryResult renders loading 2`] = `
<div
  className="animated-loading-container"
>
  <div>
    Loading...
  </div>
  <div
    className="animated-loading"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`QueryResult renders no cases found 1`] = `
<span>
  No 
  cases
   found
</span>
`;

exports[`QueryResult renders no legislation found 1`] = `
<span>
  No 
  legislation
   found
</span>
`;
